--- a/index.html
+++ b/index.html
@@ -9,9 +9,37 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1 class="header_logo">Header</h1>
+        <div class="header_logo">Header logo</div>
+        <div class="links">
+          <ul>
+            <li>
+              <a href="#">header link one</a>
+            </li>
+            <li>
+              <a href="#">header link two</a>
+            </li>
+            <li>
+              <a href="#">header link three</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div>Body</div>
+      <div class="hero">
+        <div class="left_hero">
+          <h1>This website is awesome</h1>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button class="sign_up">Sign up</button>
+        </div>
+        <div class="right_hero">
+          <div class="image">
+            <img src="" alt="this is a placeholder for an image" />
+          </div>
+        </div>
+      </div>
+      <div class="body"></div>
       <div class="footer">Footer</div>
     </div>
   </body>
