--- a/index.html
+++ b/index.html
@@ -39,7 +39,43 @@
           </div>
         </div>
       </div>
-      <div class="body"></div>
+      <div class="body">
+        <h1 class="information-header">Some random information</h1>
+        <div class="img-container">
+          <div>
+            <div class="image-box"></div>
+            <div class="subtext">
+              this is some subtext under an illustration or image
+            </div>
+          </div>
+          <div>
+            <div class="image-box"></div>
+            <div class="subtext">
+              this is some subtext under an illustration or image
+            </div>
+          </div>
+          <div>
+            <div class="image-box"></div>
+            <div class="subtext">
+              this is some subtext under an illustration or image
+            </div>
+          </div>
+          <div>
+            <div class="image-box"></div>
+            <div class="subtext">
+              this is some subtext under an illustration or image
+            </div>
+          </div>
+        </div>
+        <div class="quote-section">
+          <div class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </div>
+          <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
+      </div>
       <div class="footer">Footer</div>
     </div>
   </body>
