--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
           </div>
           <div class="quote-author">-Thor, God of Thunder</div>
         </div>
+        <div class="call-to-action">
+          <div>
+            <div class="action-title">Call to action! It's time!</div>
+            <div class="action-subtext">
+              Sign up for our product by clicking that button right over there!
+            </div>
+          </div>
+          <div>
+            <button class="action-button">Sign up</button>
+          </div>
+        </div>
       </div>
       <div class="footer">Footer</div>
     </div>
